Gitconfig name change and remove extra software

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Fedor Borshev
-	email = fedor@borshev.com
+	name = Illia Polliul
+	email = ilush8@gmail.com
 [core]
 	autocrlf = input
 	editor = /usr/bin/vim
