--- a/ansible/roles/productivity/meta/main.yml
+++ b/ansible/roles/productivity/meta/main.yml
@@ -1,10 +1,10 @@
 ---
   dependencies:
-    - role: geerlingguy.mas
+    - role: geerlingguy.mac.mas
       vars:
         mas_installed_apps:
-          - id: 907364780
-            name: Tomato One
+          - id: 1494210770
+            name: Tomato 2
           - id: 1335413823
             name: Ka-block!
           # - id: 1055511498
@@ -17,13 +17,14 @@
           #   name: IA Writer
           - id: 747648890
             name: Telegram
+          - id: 937984704
+            name: Amphetamine
           # - id: 409203825
           #   name: Numbers
           # - id: 409201541
           #   name: Pages
-          - id: 409183694
-            name: Keynote
+          # - id: 409183694
+          #   name: Keynote
           # - id: 1289583905
           #   name: Pixelmator Pro
-          - id: 470158793
-            name: Keka
+
