--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,7 @@
     ~/.config/fish/config.fish: fish/config.fish
     ~/.config/fish/f213: fish/f213
     ~/.config/omf: fish/omf
-    ~/.config/karabiner: karabiner
+#    ~/.config/karabiner: karabiner
     ~/.vimrc: .vimrc
     ~/.vim: vimrc
     ~/.screenrc: .screenrc
@@ -35,5 +35,5 @@
   - command: ./run-ansible.sh
     stdin: true
     stdout: true
-    description: Poring software
+    description: Pouring software
 
