--- a/ansible/roles/productivity/meta/main.yml
+++ b/ansible/roles/productivity/meta/main.yml
@@ -7,24 +7,11 @@
             name: Tomato 2
           - id: 1335413823
             name: Ka-block!
-          # - id: 1055511498
-          #   name: Day One
-          # - id: 904280696
-          #   name: Things
-          # - id: 1091189122
-          #   name: Bear
-          # - id: 775737590
-          #   name: IA Writer
           - id: 747648890
             name: Telegram
           - id: 937984704
             name: Amphetamine
-          # - id: 409203825
-          #   name: Numbers
-          # - id: 409201541
-          #   name: Pages
-          # - id: 409183694
-          #   name: Keynote
-          # - id: 1289583905
-          #   name: Pixelmator Pro
+          - id: 1510445899
+            name: Meeter
+
 
