--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,17 @@
 [user]
 	name = Illia Polliul
-	email = ilush8@gmail.com
+	email = ipolliul@juniper.net
 [core]
 	autocrlf = input
-	editor = /usr/bin/vim
+	editor = nvim
+	excludesfile = /Users/ipolliul/.gitignore
 [alias]
     l   = log --oneline --graph --decorate
     st  = status
     br  = branch
     c   = checkout
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+    mr = !sh -c 'git fetch $1 merge-requests/$2/head:mr-$1-$2 && git checkout mr-$1-$2' -
 [color "branch"]
     current = yellow reverse
     local = yellow
@@ -39,3 +41,12 @@
 	smudge = git-lfs smudge -- %f
 [credential]
 	helper = osxkeychain
+[http]
+	sslVerify = false
+
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+#[diff]
+#    tool = default-difftool
+#[difftool "default-difftool"]
+#    cmd = code --wait --diff $LOCAL $REMOTE
