--- a/.gitconfig
+++ b/.gitconfig
@@ -32,8 +32,8 @@
 	default = current
     #recurseSubmodules = check
 [pager]
-    show = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight |less
-    diff = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight |less
+    show = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight | less  
+    diff = `brew --prefix git`/share/git-core/contrib/diff-highlight/diff-highlight | less  
 [filter "lfs"]
 	process = git-lfs filter-process
 	required = true
